syntax="proto3";

package protos;

option go_package = "protos/order;order";

service order{
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse){};
    rpc GetUser(GetUserRequest) returns (GetUserResponse){};
}

message CreateOrderRequest{
    int32 user_id=1;
    string item=2;
    float price=3;
}

message CreateOrderResponse{
    int32 order_id=1;
    string item=2;
    float price=3;
    string created_at=4;
    Status status=5;
    GetUserResponse created_by=6;
}

message GetUserRequest{
    int32 id =1;
}

message GetUserResponse{
    int32 id=1;
    string username=2;
    string created_at=3;
}

enum Status{
    FAILED=0;
    PENDING=1;
    COMPLETE=2;
}

