syntax="proto3";

package user;

option go_package = "protos/user;user";

service user{
    rpc GetUser(UserRequest) returns (UserResponse){};
}

message UserRequest{
    int32 id =1;
}

message UserResponse{
    int32 id=1;
    string username=2;
    string created_at=3;

}